--- a/app/src/main/res/layout/activity_detail_movie.xml
+++ b/app/src/main/res/layout/activity_detail_movie.xml
@@ -49,7 +49,7 @@
         android:textStyle="italic"
         android:textSize="16sp"/>
 
-    <view
+    <View
         android:id="@+id/border_one"
         android:layout_width="match_parent"
         android:layout_height="0.5dp"
@@ -80,7 +80,7 @@
         android:layout_below="@id/border_one"
         android:layout_marginLeft="26dp"
         android:background="@drawable/bg_corner"/>
-    <view
+    <View
         android:id="@+id/border_two"
         android:layout_width="match_parent"
         android:layout_height="0.5dp"
