--- a/app/src/main/res/layout/activity_detail_movie.xml
+++ b/app/src/main/res/layout/activity_detail_movie.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="#EEEEEE"
     tools:context=".DetailMovieAct">
 
     <com.jgabrielfreitas.core.BlurImageView
@@ -12,15 +14,12 @@
         android:layout_width="match_parent"
         android:layout_height="200dp"
         android:scaleType="centerCrop"
-        app:radius="5"
-        android:src="@drawable/poster_spiderman"/>
+        app:radius="10"/>
 
     <ImageView
         android:id="@+id/img_poster_detail_mini"
         android:layout_width="100dp"
         android:layout_height="150dp"
-        android:src="@drawable/poster_spiderman"
-        android:layout_below="@id/img_poster_detail"
         android:layout_marginTop="-60dp"
         android:layout_marginStart="30dp"
         android:elevation="10dp"/>
@@ -30,8 +29,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="TITLE MOVIE"
-        android:layout_toEndOf="@id/img_poster_detail_mini"
-        android:layout_below="@id/img_poster_detail"
         android:layout_marginTop="15dp"
         android:layout_marginStart="26dp"
         android:layout_marginEnd="26dp"
@@ -41,73 +38,61 @@
         android:id="@+id/txt_year_detail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/txt_title_detail"
-        android:layout_toRightOf="@id/img_poster_detail_mini"
         android:text="YEAR"
         android:layout_marginTop="10dp"
-        android:layout_marginLeft="26dp"
+        android:layout_marginStart="26dp"
         android:textStyle="italic"
         android:textSize="16sp"/>
 
     <View
-        android:id="@+id/border_one"
         android:layout_width="match_parent"
         android:layout_height="0.5dp"
         android:background="@drawable/bg_gray"
-        android:layout_below="@id/img_poster_detail_mini"
         android:layout_marginRight="26dp"
         android:layout_marginLeft="26dp"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"/>
 
     <TextView
-        android:id="@+id/txt_genre_detail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="GENRE"
-        android:layout_below="@id/border_one"
-        android:layout_marginLeft="26dp"
+        android:layout_marginStart="26dp"
         android:textSize="16sp"
         android:textStyle="bold"/>
     <TextView
-        android:id="@+id/txt_genre_detail2"
+        android:id="@+id/txt_genre_detail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="GENRE 2"
         android:textSize="14sp"
         android:textColor="@android:color/white"
-        android:layout_toRightOf="@id/txt_genre_detail"
-        android:layout_below="@id/border_one"
-        android:layout_marginLeft="26dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginStart="26dp"
         android:background="@drawable/bg_corner"/>
     <View
-        android:id="@+id/border_two"
         android:layout_width="match_parent"
         android:layout_height="0.5dp"
         android:background="@drawable/bg_gray"
-        android:layout_below="@id/txt_genre_detail2"
         android:layout_marginRight="26dp"
         android:layout_marginLeft="26dp"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"/>
 
     <TextView
-        android:id="@+id/txt_description_detail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="DESCRIPTION"
-        android:layout_below="@id/border_two"
-        android:layout_marginLeft="26dp"
+        android:layout_marginStart="26dp"
         android:textSize="16sp"
         android:textStyle="bold"/>
     <TextView
-        android:id="@+id/txt_description_detail2"
+        android:id="@+id/txt_description_detail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Description Movie"
-        android:textSize="14sp"
-        android:layout_below="@id/txt_description_detail"
+        android:textSize="16sp"
         android:layout_marginLeft="26dp"
         android:layout_marginRight="26dp"
         android:layout_marginTop="10dp"/>
-</RelativeLayout>
+</LinearLayout>
