--- a/app/src/main/res/layout/activity_detail_movie.xml
+++ b/app/src/main/res/layout/activity_detail_movie.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -8,91 +8,98 @@
     android:orientation="vertical"
     android:background="#EEEEEE"
     tools:context=".DetailMovieAct">
-
-    <com.jgabrielfreitas.core.BlurImageView
-        android:id="@+id/img_poster_detail"
-        android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:scaleType="centerCrop"
-        app:radius="10"/>
-
-    <ImageView
-        android:id="@+id/img_poster_detail_mini"
-        android:layout_width="100dp"
-        android:layout_height="150dp"
-        android:layout_marginTop="-60dp"
-        android:layout_marginStart="30dp"
-        android:elevation="10dp"/>
-
-    <TextView
-        android:id="@+id/txt_title_detail"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="TITLE MOVIE"
-        android:layout_marginTop="15dp"
-        android:layout_marginStart="26dp"
-        android:layout_marginEnd="26dp"
-        android:textSize="18sp"
-        android:textStyle="bold"/>
-    <TextView
-        android:id="@+id/txt_year_detail"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="YEAR"
-        android:layout_marginTop="10dp"
-        android:layout_marginStart="26dp"
-        android:textStyle="italic"
-        android:textSize="16sp"/>
+        android:orientation="vertical">
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="0.5dp"
-        android:background="@drawable/bg_gray"
-        android:layout_marginRight="26dp"
-        android:layout_marginLeft="26dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"/>
+        <com.jgabrielfreitas.core.BlurImageView
+            android:id="@+id/img_poster_detail"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:scaleType="centerCrop"
+            app:radius="10"/>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="GENRE"
-        android:layout_marginStart="26dp"
-        android:textSize="16sp"
-        android:textStyle="bold"/>
-    <TextView
-        android:id="@+id/txt_genre_detail"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="GENRE 2"
-        android:textSize="14sp"
-        android:textColor="@android:color/white"
-        android:layout_marginTop="10dp"
-        android:layout_marginStart="26dp"
-        android:background="@drawable/bg_corner"/>
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="0.5dp"
-        android:background="@drawable/bg_gray"
-        android:layout_marginRight="26dp"
-        android:layout_marginLeft="26dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"/>
+        <ImageView
+            android:id="@+id/img_poster_detail_mini"
+            android:layout_width="100dp"
+            android:layout_height="150dp"
+            android:layout_marginTop="-60dp"
+            android:layout_marginStart="30dp"
+            android:elevation="10dp"
+            android:contentDescription="@string/poster_detail"/>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="DESCRIPTION"
-        android:layout_marginStart="26dp"
-        android:textSize="16sp"
-        android:textStyle="bold"/>
-    <TextView
-        android:id="@+id/txt_description_detail"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Description Movie"
-        android:textSize="16sp"
-        android:layout_marginLeft="26dp"
-        android:layout_marginRight="26dp"
-        android:layout_marginTop="10dp"/>
-</LinearLayout>
+        <TextView
+            android:id="@+id/txt_title_detail"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/title_movie"
+            android:layout_marginTop="15dp"
+            android:layout_marginStart="26dp"
+            android:layout_marginEnd="26dp"
+            android:textSize="18sp"
+            android:textStyle="bold"/>
+        <TextView
+            android:id="@+id/txt_year_detail"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/year"
+            android:layout_marginTop="10dp"
+            android:layout_marginStart="26dp"
+            android:textStyle="italic"
+            android:textSize="16sp"/>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
+            android:background="@drawable/bg_gray"
+            android:layout_marginRight="26dp"
+            android:layout_marginLeft="26dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/genre"
+            android:layout_marginStart="26dp"
+            android:textSize="16sp"
+            android:textStyle="bold"/>
+        <TextView
+            android:id="@+id/txt_genre_detail"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/genre_2"
+            android:textSize="14sp"
+            android:textColor="@android:color/white"
+            android:layout_marginTop="10dp"
+            android:layout_marginStart="26dp"
+            android:background="@drawable/bg_corner"/>
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
+            android:background="@drawable/bg_gray"
+            android:layout_marginRight="26dp"
+            android:layout_marginLeft="26dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/description"
+            android:layout_marginStart="26dp"
+            android:textSize="16sp"
+            android:textStyle="bold"/>
+        <TextView
+            android:id="@+id/txt_description_detail"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/description_movie"
+            android:textSize="16sp"
+            android:layout_marginLeft="26dp"
+            android:layout_marginRight="26dp"
+            android:layout_marginTop="10dp"/>
+    </LinearLayout>
+
+</ScrollView>
